[project]
name = "Jandig"
version = "1.4.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "babel~=2.16",
  "boto3~=1.36",
  "django-cors-headers~=3.14",
  "django-environ~=0.12",
  "django-extensions~=3.2",
  "django-htmx~=1.21",
  "django-storages~=1.14",
  "django~=5.1",
  "djangorestframework~=3.15",
  "drf-nested-routers~=0.94",
  "factory-boy~=3.3",
  "gevent~=24.11",
  "jinja2~=3.1",
  "markupsafe~=2.1",
  "pillow~=11.1",
  "psycopg2-binary~=2.9",
  "pymarker~=0.3",
  "sentry-sdk~=2.20",
  "Sphinx~=8.1",
  "hypercorn[h3]>=0.17.3",
]

[dependency-groups]
dev = [
  "dj-inmemorystorage~=2.1",
  "django-debug-toolbar~=4.4",
  "invoke~=2.2",
  "playwright~=1.49",
  "pytest-django~=4.9",
  "pytest-playwright~=0.4",
  "pytest-xdist~=3.6",
  "pytest~=7.4",
  "ruff~=0.9",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["src/core", "src/users", "src/blog", "src/ui_tests"]
pythonpath = "src"
addopts="-n4"

# Ignore deprecation warnings from botocore until https://github.com/boto/botocore/pull/3239 is merged
filterwarnings =  [ 
    "ignore::DeprecationWarning:botocore.*:"
]

[tool.ruff]
exclude = [
  ".git",
  "migrations",
  ".venv",
]
line-length = 88
# Assume Python 3.13
target-version = "py313"

