[project]
name = "Jandig"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "babel~=2.16",
  "boto3~=1.36",
  "django-cors-headers~=4.7",
  "django-environ~=0.12",
  "django-extensions~=4.0",
  "django-storages~=1.14",
  "django~=5.1",
  "djangorestframework~=3.15",
  "drf-nested-routers~=0.94",
  "gevent~=24.11",
  "gunicorn~=23.0",
  "jinja2~=3.1",
  "markupsafe~=3.0",
  "pillow~=11.1",
  "pymarker~=1.2",
  "sentry-sdk[django]~=2.20",
  "Sphinx~=8.1",
  "djangorestframework-simplejwt>=5.5.0",
  "fast-html>=1.0.11",
  "psycopg[binary,pool]>=3.2.9",
  "django-pghistory>=3.7.0",
]

[dependency-groups]
dev = [
  "dj-inmemorystorage~=2.1",
  "django-debug-toolbar~=5.1",
  "playwright~=1.49",
  "pytest-django~=4.9",
  "pytest-playwright~=0.4",
  "pytest-xdist~=3.6",
  "pytest~=8.3",
  "ruff>=0.11.4",
  "factory-boy~=3.3",
  "pytest-cov>=6.1.1",
  "numpy>=2.3.1",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["src/core", "src/users", "src/blog", "src/ui_tests"]
pythonpath = "src"
addopts="-n4"

[tool.coverage.run]
relative_files=true

[tool.ruff]
exclude = [
  ".git",
  "migrations",
  ".venv",
]
line-length = 88
# Assume Python 3.13
target-version = "py313"

